--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -18,7 +18,7 @@ jobs:
           cat Doxyfile.in | \
           sed s:'${PROJECT_NAME}':'pdal-c': | \
           sed s:'${pdal-c_VERSION}':'v2.0.0': | \
-          sed s:'${CMAKE_SOURCE_DIR}':$SOURCE: | \
+          sed s:'${CMAKE_SOURCE_DIR}':$SOURCE:  \
           > Doxyfile
 
           cat Doxyfile
