--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -18,7 +18,8 @@ jobs:
           cat Doxyfile.in | \
           sed s:'${PROJECT_NAME}':'pdal-c': | \
           sed s:'${pdal-c_VERSION}':'v2.0.0': | \
-          sed s:'${CMAKE_SOURCE_DIR}':$SOURCE:  \
+          sed s:'${CMAKE_SOURCE_DIR}':$SOURCE: | \
+          sed s:'${PDAL_INCLUDE_DIRS}':NONE: \
           > Doxyfile
 
           cat Doxyfile
@@ -26,7 +27,7 @@ jobs:
       - name: Run Doxygen
         uses: mattnotmitt/doxygen-action@v1.2.0
         with:
-          working-directory: 'docs'
+          doxyfile-path: 'docs/Doxyfile'
 
       - name: Commit files
         run: |
