--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -1,30 +1,32 @@
 name: Update Docs
 on:
-  workflow_dispatch
+  release:
+    types: [published]
   
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout The PR
+      - name: Checkout The Master
         uses: actions/checkout@v2
+        with:
+          ref: master
+          fetch-depth: 1
               
       - name: Build
         shell: bash
         run: |
           SOURCE=$(pwd)
           cd docs
-          VERSION=$(basename ${GITHUB_REF})
-          echo "Version Being built: ${GITHUB_REF}"
+          VERSION=$( basename ${GITHUB_REF} )
+          echo "Version Being built: ${VERSION}"
           cat Doxyfile.in | \
-          sed s:'${PROJECT_NAME}':'pdal-c': | \
-          sed s:'${pdal-c_VERSION}': $GITHUB_REF: | \
-          sed s:'${CMAKE_SOURCE_DIR}':.: | \
-          sed s:'${PDAL_INCLUDE_DIRS}':NONE: \
+          sed 's:${PROJECT_NAME}:pdal-c:' | \
+          sed 's:${pdal-c_VERSION}: '$VERSION' :' | \
+          sed 's:${CMAKE_SOURCE_DIR}:.:' | \
+          sed 's:${PDAL_INCLUDE_DIRS}:NONE:' \
           > Doxyfile
-
-          cat Doxyfile
 
       - name: Run Doxygen
         uses: mattnotmitt/doxygen-action@v1.2.0
@@ -41,7 +43,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+          branch: master
 
       
           
