--- a/tests/data/simple-reproject.json.in
+++ b/tests/data/simple-reproject.json.in
@@ -7,6 +7,9 @@
     {
       "type": "filters.reprojection",
       "out_srs": "EPSG:4326"
+    },
+    {
+      "type": "filters.delaunay"
     }
   ]
 }
