--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,16 @@
 
 cmake_minimum_required(VERSION 3.9)
 
-project(pdal-c LANGUAGES C CXX)
+project(pdal-c C CXX)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
+# Use C11 and C++11 standards
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
+
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Install to the build directory
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
